<resources>
    <string name="app_name">EasySelfHelp</string>
    <string name="home_screen_banner_text">EASY SELF HELP</string>
    <string name="tolkien_quote">Even the smallest person can change the course of the future \n- J.R.R. Tolkien</string>
    <string name="home_screen_button_string">Begin Your Journey</string>
    <string name="easy_budget">Easy \nBudget</string>
    <string name="homework_planner">Homework \nPlanner</string>
    <string name="fitness_tracker">Fitness \nTracker</string>
    <string name="positive_quotes">Positive \nQuotes</string>
    <string name="reading_list">Reading \nList</string>
    <string name="self_help_videos">Self-Help Videos</string>
    <string name="nothing_good_ever_comes_easily">Nothing Good Ever Comes Easily</string>
    <string name="meet_the_developer">Meet The Developer</string>
    <string name="add_budget_item">Add Budget Item</string>
    <string name="fitness_menu">Fitness Menu</string>
    <string name="add_homework">Add Homework Item</string>
    <string name="track_your_progress">Track Your Progress</string>
    <string name="create_workout">Create Workout</string>
    <string name="add_new_budget_item">Add New Budget Item</string>
    <string name="enter_item_name_hint">Enter Item Name</string>
    <string name="enter_amount_hint">Enter Amount</string>
    <string name="enter_category_hint">Enter Category</string>
    <string name="submit_budget_item_button_text">SUBMIT BUDGET ITEM</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="budget_item_deleted_successfully">Budget Item Deleted Successfully!</string>
    <string name="ok">OK</string>
    <string name="high_priority">High Priority?</string>
    <string name="no_regular_case">No</string>
    <string name="add_new_homework_item">Add New Homework Item</string>
    <string name="homework_edit_text_one">Enter Assignment Name</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="homework_year_hint">0000</string>
    <string name="year">Year</string>
    <string name="enter_due_date">Enter Due Date</string>
    <string name="submit_homework_item">SUBMIT HOMEWORK ITEM</string>
    <string name="high_priority_no_question">HIGH PRIORITY</string>
    <string name="homework_item_successfully_deleted">Homework Item Successfully Deleted!</string>
    <string name="clear_all_budget_items">CLEAR ALL BUDGET ITEMS</string>
    <string name="clear_all_homework_items">CLEAR ALL HOMEWORK ITEMS</string>
    <string name="quotes_title">Some Quotes to Brighten Your Day</string>
    <string name="create_new_workout">Create New Workout</string>
    <string name="book_rec">Positive Book Recommendations</string>
    <string name="good_job_keep_going">Good Job!! Keep Going!!!</string>
    <string name="add_workout_result">Add Workout Result</string>
    <string name="enter_calories_burned_hint">Enter Calories Burned</string>
    <string name="enter_amount_of_steps_optional_hint">Enter Amount of Steps(optional)</string>
    <string name="submit_workout_result">Submit Workout Result</string>
    <string name="enter_duration">Enter Duration</string>
    <string name="hours">Hours</string>
    <string name="add_workout_result_text">Add Workout Result</string>
    <string name="clear_workout_results">Clear Workout Results</string>
    <string name="are_you_sure_you_want_to_clear_all_workout_results">ARE YOU SURE YOU WANT TO CLEAR ALL WORKOUT RESULTS?</string>
    <string name="go_back">GO BACK</string>
    <string name="dev_blurb">Aidan Matkosky is an amateur programmer, photographer, musician, rail enthusiast, and actor from Scranton, PA. As the \'therapist\' of his friend group, Aidan enjoys seeing his work help others succeed, which is why he chose to create this app.</string>
    <string-array name="spinner_30_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="spinner_31_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="spinner_29_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
    </string-array>
    <string-array name="spinner_12_month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>