<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_style"
    android:backgroundTint="@color/money_green"
    tools:context=".BudgetItemPackage.AddBudgetItemFragment">

    <TextView
        android:id="@+id/textView6"
        style="@style/recycler_title_view_style"
        android:text="@string/add_new_budget_item"
        android:textSize="@dimen/add_item_text_view_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/item_name_edit_text"
        style="@style/edit_text_style"
        android:hint="@string/enter_item_name_hint"
        app:layout_constraintBottom_toTopOf="@+id/budget_amount_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/budget_amount_edit_text"
        style="@style/edit_text_style"
        android:hint="@string/enter_amount_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/budget_category_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name_edit_text" />

    <EditText
        android:id="@+id/budget_category_edit_text"
        style="@style/edit_text_style"
        android:hint="@string/enter_category_hint"
        app:layout_constraintBottom_toTopOf="@+id/submit_budget_item_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_amount_edit_text" />

    <Button
        android:id="@+id/submit_budget_item_button"
        style="@style/submit_button_style"
        android:text="@string/submit_budget_item_button_text"
        android:textColor="@color/money_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_category_edit_text" />


</androidx.constraintlayout.widget.ConstraintLayout>