<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_style"
    tools:context=".FitnessPackage.FitnessMenuFragment">
    <TextView
        android:id="@+id/textView5"
        style="@style/title_view_style"
        android:text="@string/fitness_menu"
        android:textColor="@color/periwinkle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/track_progress_button"
        style="@style/fitness_menu_button"
        android:text="@string/track_your_progress"
        app:layout_constraintBottom_toTopOf="@+id/create_workout_set_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
    <Button
        android:id="@+id/create_workout_set_button"
        style="@style/fitness_menu_button"
        android:text="@string/create_workout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_progress_button" />


</androidx.constraintlayout.widget.ConstraintLayout>