<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/space_cadet"
    tools:context=".AddHomeworkItemFragment">

    <TextView
        android:id="@+id/textView8"
        style="@style/recycler_title_view_style"
        android:layout_marginTop="@dimen/main_menu_button_margin"
        android:text="@string/add_new_homework_item"
        android:textSize="@dimen/add_homework_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/assignment_name_edit_text"
        style="@style/edit_text_style"
        android:layout_marginTop="@dimen/main_menu_button_margin"
        android:text="@string/homework_edit_text_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_menu_button_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignment_name_edit_text">

        <TextView
            style="@style/recycler_title_view_style"
            android:layout_marginVertical="@dimen/main_menu_button_margin"
            android:text="@string/enter_due_date"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/homework_date_layout_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/due_month_edit_text"
                style="@style/homework_date_edit_text_style"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/homework_date_text_view_style"
                android:text="@string/month"
                android:textSize="@dimen/radio_button_text_size_recycler" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            style="@style/homework_date_layout_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/due_day_edit_text"
                style="@style/homework_date_edit_text_style"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/homework_date_text_view_style"
                android:text="@string/day"
                android:textSize="@dimen/radio_button_text_size_recycler" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            style="@style/homework_date_layout_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                style="@style/homework_date_edit_text_style"
                android:layout_width="@dimen/homework_year_width"
                android:hint="@string/homework_year_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/homework_date_text_view_style"
                android:text="@string/year"
                android:textSize="@dimen/radio_button_text_size_recycler" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>