<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_style"
    android:background="@color/periwinkle"
    tools:context=".FitnessPackage.WorkoutResultPackage.DeleteWorkoutProgressResultFragment">

    <TextView
        android:id="@+id/delete_workout_result_title_view"
        style="@style/recycler_title_view_style"
        android:fontFamily="@font/baloo"
        android:text="@string/are_you_sure_you_want_to_clear_all_workout_results"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_workout_result_title_view">

        <Button
            android:id="@+id/button_no"
            style="@style/button_view_style"
            android:backgroundTint="@color/money_green"
            android:fontFamily="@font/baloo"
            android:text="@string/no"
            android:textColor="@color/periwinkle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_yes"
            style="@style/button_view_style"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/baloo"
            android:text="@string/yes"
            android:textColor="@color/periwinkle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_no"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/go_back"
        style="@style/submit_button_style"
        android:backgroundTint="@color/orchid"
        android:text="@string/go_back"
        android:visibility="invisible"
        android:textColor="@color/periwinkle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />


</androidx.constraintlayout.widget.ConstraintLayout>