<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_style"
    tools:context=".AboutMeFragment">

    <TextView
        android:id="@+id/textView5"
        style="@style/title_view_style"
        android:text="@string/meet_the_developer"
        android:textColor="@color/space_cadet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_marginTop="@dimen/main_menu_button_margin"
        android:layout_width="@dimen/home_screen_icon_width"
        android:layout_height="@dimen/home_screen_icon_width"
        android:scaleType="centerCrop"
        android:src="@drawable/engineer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        style="@style/text_view_style"
        android:layout_marginTop="@dimen/main_menu_button_margin"
        android:text="@string/dev_blurb"
        android:textColor="@color/space_cadet"
        app:layout_constraintBottom_toTopOf="@+id/go_back_dev_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/go_back_dev_fragment"
        style="@style/submit_button_style"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/baloo"
        android:text="@string/go_back"
        android:textColor="@color/desert_sand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>